8. String to Integer (atoi)

--- a/008.md
+++ b/008.md
@@ -1,1 +1,104 @@
+8\. String to Integer (atoi)
 
+Implement atoi to convert a string to an integer.
+
+**Hint:** Carefully consider all possible input cases. If you want a challenge, please do not see below and ask yourself what are the possible input cases.
+
+**Notes:** It is intended for this problem to be specified vaguely (ie, no given input specs). You are responsible to gather all the input requirements up front.
+
+**Update (2015-02-10):**
+
+The signature of the C++ function had been updated. If you still see your function signature accepts a const char * argument, please click the reload button  to reset your code definition.
+
+spoilers alert... click to show requirements for atoi.
+
+**Requirements for atoi:**
+The function first discards as many whitespace characters as necessary until the first non-whitespace character is found. Then, starting from this character, takes an optional initial plus or minus sign followed by as many numerical digits as possible, and interprets them as a numerical value.
+
+The string can contain additional characters after those that form the integral number, which are ignored and have no effect on the behavior of this function.
+
+If the first sequence of non-whitespace characters in str is not a valid integral number, or if no such sequence exists because either str is empty or it contains only whitespace characters, no conversion is performed.
+
+If no valid conversion could be performed, a zero value is returned. If the correct value is out of the range of representable values, INT_MAX (2147483647) or INT_MIN (-2147483648) is returned.
+
+#解析
+需要处理的情况有：
+1. 前面有空格
+2. +、-号判断
+3. 异常字符：只选取异常字符之前的数字
+4. 数据溢出
+
+前两者很好处理，就不多说了。
+
+##解法一
+处理完空格和+、-之后，我们在之后的子字符串中搜索是否有异常字符，然后依次取值求值，直到遇到异常符号或者到达字符串末尾。
+
+> You are here! 
+Your runtime beats 3.32% of cpp submissions.
+
+```
+int myAtoi(string str) {
+    int len = str.size();
+    bool flag = 1;
+    char *chr = "0123456789";
+    int startIdx = 0, endIdx = len;
+    while(str[startIdx] == ' '){   //去除空格
+            ++startIdx;
+    }
+    if(str[startIdx] == '+') {     //判断是否有正负号
+        flag = 1;
+        ++startIdx;
+    }
+    else if(str[startIdx] == '-') {
+        flag =0;
+        ++startIdx;
+    }
+    if(str.find_first_not_of(chr,startIdx) != string::npos) endIdx = str.find_first_not_of(chr,startIdx);
+
+    int rst = 0;
+    int tmprst = 0;
+    for(int i = startIdx; i < endIdx; ++i){
+        tmprst = tmprst * 10 + str[i] - '0';
+        cout << tmprst << endl;
+        if(flag && (tmprst /10 != rst)){
+            return INT_MAX;
+        }
+        else if(!flag && (tmprst /10 != rst)){
+            return INT_MIN;
+        }
+        rst = tmprst;
+    }
+    return flag ? rst : -rst;
+}
+```
+
+##解法二
+
+解法一效率太低，简直不能忍。
+
+改进的地方有：
+
+1. 对空格的判断，不用wile循环，而是直接find第一个非空格字符
+2. 对于求和，其实不用寻找异常字符的位置，直接进行for循环，知道遇到异常字符或字符串末尾截止。
+
+> You are here! 
+Your runtime beats 38.13% of cpp submissions.
+
+```
+int myAtoi(string str) {
+    int flag = 1;
+    int startIdx = str.find_first_not_of(' ');
+    if(str[startIdx] == '+') { startIdx++;}
+    else if(str[startIdx] == '-') {
+        flag = -1;
+        startIdx++;
+    }
+    long rst = 0;
+    while('0' <= str[startIdx] && str[startIdx] <= '9'){
+        rst = rst * 10 + str[startIdx++] - '0';
+        if(rst * flag > INT_MAX) return INT_MAX;
+        if(rst * flag < INT_MIN) return INT_MIN;
+    }
+    return rst * flag;
+}    
+```
