--- a/003.md
+++ b/003.md
@@ -29,7 +29,7 @@ Note that the answer must be a substring, "pwke" is a subsequence and not a subs
 > You are here! 
 Your runtime beats 85.57% of cpp submissions.
 
-```
+```cpp
 #include <iostream>
 //#include <string>
 using namespace std;
