4. Median of Two Sorted Arrays

--- a/004.md
+++ b/004.md
@@ -31,7 +31,7 @@ The median is (2 + 3)/2 = 2.5
 > You are here! 
 Your runtime beats 22.67% of cpp submissions.
 
-```
+```cpp
 class Solution {
 public:
     double findMedianSortedArrays(vector<int>& nums1, vector<int>& nums2) {
@@ -100,7 +100,7 @@ public:
 > You are here! 
 Your runtime beats 66.14% of cpp submissions.
 
-```
+```cpp
 class Solution {
 public:
     double findMedianSortedArrays(vector<int>& nums1, vector<int>& nums2) {
@@ -168,7 +168,7 @@ public:
 Your runtime beats 8.78% of cpp submissions.
 
 
-```
+```cpp
 double findMedianSortedArrays(vector<int>& nums1, vector<int>& nums2) {
         int N1 = nums1.size();
         int N2 = nums2.size();
@@ -197,7 +197,7 @@ double findMedianSortedArrays(vector<int>& nums1, vector<int>& nums2) {
 **小改一**
 
 在 *if(N1==0)*的情况下，不是除以“2.”，而是改成强制类型转换后
-```
+```cpp
 if(N1 == 0) return ((double)nums2[(N2 - 1) / 2] + (double)nums2[N2 / 2]) / 2;
 ```
 运行时间有所降低。
@@ -209,7 +209,7 @@ Your runtime beats 36.87% of cpp submissions.
 
 中间用到的L1、R1、L2、R2 其实真实值就是整数，没必要将其定义为double。所以考虑将其定义为int。最后return时应用类型强制转换。
 
-```
+```cpp
     int L1 = (mid1 == 0) ? INT_MIN : nums1[(mid1 - 1) / 2] ;
     int L2 = (mid2 == 0) ? INT_MIN : nums2[(mid2 - 1) / 2] ;
     int R1 = (mid1 == N1 * 2) ? INT_MAX : nums1[mid1 / 2];
@@ -226,7 +226,7 @@ Your runtime beats 36.87% of cpp submissions.
 Your runtime beats 72.78% of cpp submissions.
 
 最后，为了验证强制类型转换 vs. 整数/小数。又将最后的return中的强制转换改为
-```
+```cpp
     if(L1 > R2) high = mid1 - 1;
     else if (L2 > R1) low = mid1 + 1;
     else return (max(L1,L2) + min(R1,R2)) / 2.;
