--- a/005.md
+++ b/005.md
@@ -4,7 +4,7 @@ Given a string s, find the longest palindromic substring in s. You may assume th
 
 **Example:**
 
-**Input: **"babad"
+**Input:**"babad"
 
 **Output:** "bab"
 
@@ -12,7 +12,7 @@ Given a string s, find the longest palindromic substring in s. You may assume th
 
 **Example:**
 
-**Input: **"cbbd"
+**Input:**"cbbd"
 
 **Output:** "bb"
 #解析
@@ -21,7 +21,7 @@ Given a string s, find the longest palindromic substring in s. You may assume th
 时间复杂度高，超过了时间限制
 > Submission Result: Time Limit Exceeded
 
-```
+```cpp
 bool isPalindrome_5(string s){
         if(s.size() < 2) return true;
         int size = s.size();
@@ -60,7 +60,7 @@ bool isPalindrome_5(string s){
 > You are here! 
 Your runtime beats 81.14% of cpp submissions. 
 
-```
+```cpp
 string longestPalindrome(string s) {
         if (s.size() < 2)
             return s;
