--- a/006.md
+++ b/006.md
@@ -43,7 +43,7 @@ N                       3N                   5N
  > You are here! 
 Your runtime beats 96.59% of cpp submissions.
 
-```
+```cpp
 string convert(string s, int numRows) {
         if(s.size() <= numRows || numRows == 1) return s;
 
