--- a/007.md
+++ b/007.md
@@ -1,4 +1,4 @@
-7\. Reverse Integer
+7\. [Reverse Integer](https://leetcode.com/problems/reverse-integer)
 
 Reverse digits of an integer.
 
@@ -27,7 +27,7 @@ For the purpose of this problem, assume that your function returns 0 when the re
 > You are here! 
 Your runtime beats 72.14% of cpp submissions.
 
-```
+```cpp
 int reverse(int x) {
         int num = x >= 0 ? x : -x;
         int rst = 0;
@@ -47,7 +47,7 @@ int reverse(int x) {
 > You are here! 
 Your runtime beats 25.72% of cpp submissions.
 
-```
+```cpp
 int reverse(int x) {
     int ans = 0;
     while (x) {
@@ -63,7 +63,7 @@ int reverse(int x) {
 
 还有直接用 long long 来保存结果的，最后再检查是否越界。
 
-```
+```cpp
 int reverse(int x) {
     long long j = 0;
     do{
