--- a/008.md
+++ b/008.md
@@ -1,4 +1,4 @@
-8\. String to Integer (atoi)
+8\. [String to Integer (atoi)](https://leetcode.com/problems/string-to-integer-atoi)
 
 Implement atoi to convert a string to an integer.
 
@@ -36,7 +36,7 @@ If no valid conversion could be performed, a zero value is returned. If the corr
 > You are here! 
 Your runtime beats 3.32% of cpp submissions.
 
-```
+```cpp
 int myAtoi(string str) {
     int len = str.size();
     bool flag = 1;
@@ -84,7 +84,7 @@ int myAtoi(string str) {
 > You are here! 
 Your runtime beats 38.13% of cpp submissions.
 
-```
+```cpp
 int myAtoi(string str) {
     int flag = 1;
     int startIdx = str.find_first_not_of(' ');
