--- a/016.md
+++ b/016.md
@@ -49,6 +49,9 @@ first
 
 如果没有正好匹配的sum，既sum等于target，那么保存在closest中的值既为最终返回值。
 
+> You are here! 
+Your runtime beats 95.51% of cpp submissions.
+
 ```cpp
 class Solution {
 public:
