--- a/018.md
+++ b/018.md
@@ -18,6 +18,10 @@ A solution set is:
 #解析
 解题思路和3Sum，2Sum类似。确定第一个数之和，后三个就可以用3Sum的解法。
 
+> 282 / 282 test cases passed.
+
+> Runtime: 13 ms
+
 ```cpp
 class Solution {
 public:
