--- a/028.md
+++ b/028.md
@@ -5,9 +5,10 @@ Implement strStr().
 Returns the index of the first occurrence of needle in haystack, or -1 if needle is not part of haystack.
 
 #解析
-##解法一
-采用穷举法，依次比较每一种可能的情况。
+此题的意思是在haystack中找到needle第一次出现的位置。
 
+##解法一
+穷举法，遍历所有可能的情况。
 ```cpp
 class Solution {
 public:
@@ -16,7 +17,7 @@ public:
         int result = 0;
         int m = haystack.length();
         int n = needle.length();
-        
+
         for(int i = 0; i < m - n + 1; ++i){
             int j = 0;
             for(; j < n; ++j){
@@ -29,5 +30,66 @@ public:
         return -1;
     }
 };
-//KMP alo is remained to be thinked.
+```
+
+##解法二  KMP算法
+
+相关解析参考：
+1. [The Knuth-Morris-Pratt Algorithm in my own words](http://jakeboxer.com/blog/2009/12/13/the-knuth-morris-pratt-algorithm-in-my-own-words/)
+2. [Searching for Patterns | Set 2 (KMP Algorithm)](http://www.geeksforgeeks.org/searching-for-patterns-set-2-kmp-algorithm/)
+3. [KMP算法 串的模式匹配算法优秀总结](http://blog.csdn.net/ltyqljhwcm/article/details/51460713?locationNum=2)
+
+```cpp
+class Solution {
+public:
+    void CalculateLPS(string &needle, int *lps, int n){
+        lps[0] = 0;
+        
+        int len = 0;
+        int i = 1;
+        
+        while(i < n){
+            
+            if(needle[i] == needle[len]){
+                len++;
+                lps[i] = len;
+                i++;
+            }
+            else if(len){ //len != 0
+                len = lps[len -1];
+            }
+            else{
+                lps[i] = 0;
+                i++;
+            }
+        }
+    }
+
+    int strStr(string haystack, string needle) {
+        if(needle.length() == 0) return 0;
+        
+        int m = haystack.length();
+        int n = needle.length();
+        
+        int lps[n];
+        CalculateLPS(needle, lps, n);
+       
+        int i = 0, j = 0;
+        while(i < m){
+            
+            //int itmp = i;
+            if(haystack[i] == needle[j]){
+                i++;
+                j++;
+            }
+            if(j == n) return i - j;
+            
+            if(i < m && haystack[i] != needle[j]){
+                if(j) j = lps[j - 1];
+                else i++;
+            }
+        }
+        return -1;
+    }
+};
 ```
