--- a/053.md
+++ b/053.md
@@ -13,16 +13,11 @@ the contiguous subarray [4,-1,2,1] has the largest sum = 6.
 class Solution {
 public:
     int maxSubArray(vector<int>& nums) {
-        int result = 0;
+        int result = INT_MIN;
         int tmpres = 0;
         for(int i = 0; i < nums.size(); ++i){
-            tmpres += nums[i];
-            if(tmpres < 0){
-                tmpres = 0;
-            }
-            else if (tmpres > result){
-                result = tmpres;
-            }
+            tmpres = max(tmpres + nums[i], nums[i]);
+            result = max(result, tmpres);
         }
         return result;
     }
