63. Unique Paths II

--- a/063.md
+++ b/063.md
@@ -20,6 +20,7 @@ The total number of unique paths is 2.
 **Note:** m and n will be at most 100.
 
 # 解析
+## 解法一 空间复杂度O(m)
 和62题[Unique path](https://github.com/Subenle/LeetCode-in-Cpp/blob/master/062.md)思路一样，采用动态规划思想。
 不过要多考虑一些边界条件：
 1. 如果grid只有一行或者一列，那么只要出现grid中出现1，就不存在路径。
@@ -71,6 +72,25 @@ public:
             }
         }        
         return col[m - 1];        
+    }
+};
+```
+
+## 解法二 空间复杂度 O(m*n)
+解释见：[My C++ Dp solution , very simple!](https://discuss.leetcode.com/topic/4325/my-c-dp-solution-very-simple)
+
+```cpp
+class Solution {
+public:
+    int uniquePathsWithObstacles(vector<vector<int> > &obstacleGrid) {
+        int m = obstacleGrid.size() , n = obstacleGrid[0].size();
+        vector<vector<int>> dp(m+1,vector<int>(n+1,0));
+        dp[0][1] = 1;
+        for(int i = 1 ; i <= m ; ++i)
+            for(int j = 1 ; j <= n ; ++j)
+                if(!obstacleGrid[i-1][j-1])
+                    dp[i][j] = dp[i-1][j]+dp[i][j-1];
+        return dp[m][n];
     }
 };
 ```
